[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socketwrench"
version = "1.8.6"
description = "A simple Python library for creating web servers and APIs using sockets, supporting openapi and swagger."
readme = "README.md"
authors = [{ name = "Torin Halsted", email = "modularizer@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/modularizer/socketwrench"


