[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socketpulse"
version = "1.1.0"
description = "A simple Python library for creating web servers and APIs using sockets, supporting openapi and swagger."
readme = "README.md"
authors = [{ name = "Caleb", email = "jonathancaleb230@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/modularizer/socketpulse"


